--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Showcasing my Projects
-subtitle: Subtitle
+title: Jesse Efeo Saechao
+subtitle: Showcasing some of my projects 
 ---
