--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@ layout: page
 title: Jesse Efeo Saechao
 subtitle: Showcasing some of my projects 
 ---
-I wonder if this will suddenly break things?
+Hello! My name is Jesse Saechao and I am a Masters Economics student and Navy Veteran who loves cycling, cooking, story-rich video games, 
+and working with data to make economic driven decisions. I am particularly interested in working with energy and econometrics.
