--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ subtitle: Showcasing some of my projects
 ---
 Hello! My name is Jesse Saechao and I am a Masters Economics student and Navy Veteran who loves cycling, cooking, story-rich video games, 
 and working with data to make economic driven decisions. I am particularly interested in working in energy, econometrics, finance, the public sector,
-and any other industry that involves creative technical analysis to make data-driven decisions. 
+and any other industry that involves creative problem-solving to make data-driven decisions. 
