--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: page
 title: Jesse Efeo Saechao
 subtitle: Showcasing some of my projects 
 ---
-I am a Masters Economics student and Navy Veteran who loves cycling, cooking, story-rich video games, and working with data to make impactful decisions. I am particularly interested in working in energy, econometrics, finance, the public sector, and any other industry that involves creative problem-solving to make the world better one regression at a time.
+I am a Masters Economics student and Navy Veteran who loves cycling, cooking, story-rich video games, and working with data to make impactful decisions. 
+I am particularly interested in working in energy, econometrics, finance, the public sector, and any other industry that involves creative problem-solving 
+to make the world better one regression at a time.
 
-My past experiences consist of growing bacteria on petri dishes and analyzing biomedical data, to time-series analysis on housing prices and consulting for the World Bank IFC branch. My diverse background encompasses the Military, Healthcare, Data Analytics, Statistics, Econometrics, and Finance which make me an adaptable and quick learner. These traits and experiences have helped me thrive as a Corspman in the Navy and a Masters Economics student. 
+My past experiences consist of growing bacteria on petri dishes and analyzing biomedical data, to time-series analysis
+on housing prices and consulting for the World Bank IFC branch. My diverse background encompasses the Military, Healthcare, Data Analytics,
+Statistics, Econometrics, and Finance which make me an adaptable and quick learner. These traits and experiences have helped me thrive as a 
+Corspman in the Navy and a Masters Economics student. 
