--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Jesse Efeo Saechao
-subtitle: Showcasing some of my projects 
+subtitle: Navy Veteran to Economics and Data Analysis
 ---
 I am a Masters Economics student and Navy Veteran who loves cycling, cooking, story-rich video games, and working with data to make impactful decisions. 
 I am particularly interested in working in energy, econometrics, finance, the public sector, and any other industry that involves creative problem-solving 
