--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: page
 title: Jesse Efeo Saechao
 subtitle: Navy Veteran to Economics and Data Analysis
 ---
-I am a Masters Economics student and Navy Veteran who loves cycling, cooking, story-rich video games, and working with data to make impactful decisions. 
-I am particularly interested in working in energy, econometrics, finance, the public sector, and any other industry that involves creative problem-solving 
+I am Navy Veteran who recently graduated with a Masters in Quantitative Economics from Cal Poly SLO. I love cycling, cooking, story-rich video games, and working with data to make impactful decisions. 
+I am particularly interested in working in energy, finance, healthcare, and any other industry that involves creative problem-solving 
 to make the world better one regression at a time.
 <br/>
 <br/>
 My past experiences consist of growing bacteria on petri dishes and analyzing biomedical data, to time-series analysis
-on housing prices and consulting for the World Bank IFC branch. My diverse background encompasses the Military, Healthcare, Data Analytics,
+on housing prices and consulting for the World Bank IFC branch to identify causal effects of agricultural training on smallholder farmers. My diverse background encompasses the Military, Healthcare, Data Analytics,
 Statistics, Econometrics, and Finance which make me an adaptable and quick learner. These traits and experiences have helped me thrive as a 
 Corspman in the Navy and a Masters Economics student. 
