--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 layout: page
 title: Jesse Efeo Saechao
-subtitle: Navy Veteran to Economics and Data Analysis
+subtitle: Navy Veteran to Load Forecasting
 ---
 I am Navy Veteran who recently graduated with a Masters in Quantitative Economics from Cal Poly SLO. I love cycling, cooking, story-rich video games, and working with data to make impactful decisions. 
 I am particularly interested in working in energy, finance, healthcare, and any other industry that involves creative problem-solving 
 to make the world better one regression at a time.
 <br/>
 <br/>
-My past experiences consist of growing bacteria on petri dishes and analyzing biomedical data, to time-series analysis
-on housing prices and consulting for the World Bank IFC branch to identify causal effects of agricultural training on smallholder farmers. My diverse background encompasses the Military, Healthcare, Data Analytics,
-Statistics, Econometrics, and Finance which make me an adaptable and quick learner. These traits and experiences have helped me thrive as a 
-Corspman in the Navy and a Masters Economics student. 
+My past experiences consist of growing bacteria on petri dishes, analyzing biomedical data, to time-series analysis
+on housing prices, consulting for the World Bank IFC branch, and forecasting energy demand for a municipal utility. My diverse background encompasses the Military, Healthcare, Data Analytics,
+Statistics, Econometrics, Energy, and automating with scripting.
